--- a/carpatianknights/news/templates/pagination.html
+++ b/carpatianknights/news/templates/pagination.html
@@ -1,13 +1,17 @@
-<div class="pagination">
-    <span class="step-links">
-        {% if page.has_previous %}
-        <a href="?page={{page.previous_page_number}}">Previous</a>
-        {% endif %}
-        <span class="current">
-            Page {{ page.number }} of {{ page.paginator.num_pages }}.
-        </span>
-        {% if page.has_next %}
-        <a href="?page={{ page.next_page_number }}">Next</a>
-        {% endif %}
-    </span>
+<div class="container mb-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 col-sm-6 text-center pagination-block">
+            <span class="step-links">
+                {% if page.has_previous %}
+                    <a href="?page={{ page.previous_page_number }}">Попередня</a>
+                {% endif %}
+                <span class="current">
+                    Сторінка № {{ page.number }} з {{ page.paginator.num_pages }}.
+                </span>
+                {% if page.has_next %}
+                    <a href="?page={{ page.next_page_number }}">Наступна</a>
+                {% endif %}
+            </span>
+        </div>
+    </div>
 </div>
