--- a/src/sass/layouts/_l-news-block.scss
+++ b/src/sass/layouts/_l-news-block.scss
@@ -7,6 +7,7 @@
   .filter-form-container {
     background-color: $main-bg-color;
     padding: 0 15px 25px;
+    border-radius: 10px;
 
     label {
       color: white;
@@ -38,10 +39,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 300px;
+    height: 320px;
     padding: 30px;
     color: $main-black-text;
-    background:rgba(255,255,255, 0.8);
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
     transition: background-color .4s ease-in-out, color .4s ease-in-out;
     position: relative;
 
@@ -57,6 +59,7 @@
       color: white;
       padding: 15px 30px;
       background-color: $main-bg-color;
+      border-radius: 10px;
       transition: background-color .4s ease-in-out, color .4s ease-in-out;
     }
 
@@ -96,11 +99,11 @@
     .news-tag-container {
       border-radius: 5px;
       color: #333;
-      display: inline-block;
+      flex-wrap: wrap;
       font-size: 12px;
       font-weight: bold;
       margin: 0 5px 0 0;
-      padding: 7px 7px;
+      padding: 5px 5px;
 
       .news-tag {
         border-radius: 12.5px;
@@ -112,7 +115,7 @@
         font-weight: 700;
         font-size: 12px;
         width: 50px;
-
+        white-space: nowrap;
       }
     }
 
