--- a/src/sass/layouts/_l-active-tours.scss
+++ b/src/sass/layouts/_l-active-tours.scss
@@ -7,7 +7,7 @@
 }
 
 .tour-card {
-  height: 300px;
+  min-height: 300px;
   background: rgba(21, 21, 21, 0.7);
   color: white;
   padding: 30px;
@@ -24,16 +24,6 @@
 
     .progressbar-progress {
       background-color: rgba(255, 255, 255, 0.5) !important;
-    }
-  }
-
-  button {
-    position: absolute;
-    height: 40px;
-    padding: 10px;
-    z-index: 2;
-    :hover {
-      color: rgb(133, 123, 123);
     }
   }
 
@@ -55,18 +45,19 @@
   }
 
   .button_register {
-    width: 300px;
-    font-size: 22px;
+    position: absolute;
+    width: auto;
+    font-size: 18px;
     text-align: center;
-    bottom: 5px;
+    bottom: 10px;
     right: 30px;
+    padding-left: 0;
+    padding-right: 0;
 
     .href_register {
+      padding: 10px 10px;
       color: white;
       text-decoration: none;
-      &:hover {
-        color: rgb(133, 123, 123);
-      }
     }
   }
 
