--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,6 +32,7 @@
 
 //Crusade
 @import "layouts/l-active-tours";
+@import "layouts/l-route-detail";
 
 //Person block
 @import "layouts/l-person-block";
