--- a/src/sass/layouts/_l-footer.scss
+++ b/src/sass/layouts/_l-footer.scss
@@ -17,4 +17,9 @@ footer {
     border-top: 5vh solid transparent;
     border-right: 100vw solid $main-bg-color;
   }
+  p {
+    margin-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
