--- a/src/sass/layouts/_l-active-tours.scss
+++ b/src/sass/layouts/_l-active-tours.scss
@@ -9,6 +9,7 @@
 .tour-card {
   min-height: 300px;
   background: rgba(21, 21, 21, 0.7);
+  border-radius: 10px;
   color: white;
   padding: 30px;
   margin: 30px 0;
@@ -28,8 +29,20 @@
   }
 
   .button_active_tour {
-    bottom: 5px;
+    bottom: 10px;
     left: 30px;
+    position: absolute;
+    width: auto;
+    font-size: 18px;
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+
+    .href_detail {
+      padding: 10px 10px;
+      color: white;
+      text-decoration: none;
+    }
 
     .fontawesome_icon {
       display: None;
