--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -34,5 +34,8 @@
 @import "layouts/l-active-tours";
 @import "layouts/l-route-detail";
 
+//Account
+@import "layouts/l-account-login";
+
 //Person block
 @import "layouts/l-person-block";
