--- a/carpatianknights/account/templates/account/register.html
+++ b/carpatianknights/account/templates/account/register.html
@@ -1,11 +1,50 @@
 {% extends "account_base.html" %}
-{% block title %}Create an account{% endblock %}
+{% load widget_tweaks %}
+
+{% block title %}Створення аккаунта{% endblock %}
 {% block account_content %}
-    <h1>Create an account</h1>
-    <p>Please, sign up using the following form:</p>
-    <form action="." method="post">
-        {{ user_form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Create my account"></p>
-    </form>
+    <div class="container">
+        <div class="row justify-content-center my-5">
+            <form action="." method="post" class="col-lg-6 col-md-10 col-sm-12 login-form">
+                <h2 class="text-white text-center">Реєстрація</h2>
+                <div class="mb-3">
+                    <label for="{{ user_form.first_name.id_for_label }}">Ім'я</label>
+                    {% render_field user_form.first_name class+="form-control"|attr:"required:True"%}
+                </div>
+                <div class="mb-3">
+                    <label for="{{ user_form.last_name.id_for_label }}">Прізвище</label>
+                    {% render_field user_form.last_name class+="form-control" %}
+                </div>
+                <div class="mb-3">
+                    <label for="{{ user_form.email.id_for_label }}" class="form-label">Адреса електронної пошти</label>
+                    {% render_field user_form.email tupe="email" class+="form-control" %}
+                </div>
+                <label for="{{ user_form.phone_number.id_for_label }}" class="form-label">Номер телефону</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">+380</span>
+                    {% render_field user_form.phone_number type="number" class+="form-control" %}
+                </div>
+                <label for="{{ user_form.date_of_birth.id_for_label }}" class="form-label">Дата народження</label>
+                <div class="input-group mb-3">
+                    {% render_field user_form.date_of_birth tupe="date" class+="form-control" %}
+                </div>
+                <div class="mb-3">
+                    <label for="{{ user_form.password.id_for_label }}" class="form-label">Пароль</label>
+                    {% render_field user_form.password class+="form-control" %}
+                </div>
+                <div class="mb-3">
+                    <label for="{{ user_form.password2.id_for_label }}" class="form-label">Повторити пароль</label>
+                    {% render_field user_form.password2 class+="form-control" %}
+                </div>
+                {% csrf_token %}
+                <div class="form-check mb-3">
+                    {% render_field user_form.accept class+="form-check-input" %}
+                    <label class="form-check-label" for="{{ user_form.accept.id_for_label }}">
+                        Згода на обробку персональних данних
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-secondary w-100">Створити аккаунт</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
