--- a/carpatianknights/account/templates/registration/password_reset_done.html
+++ b/carpatianknights/account/templates/registration/password_reset_done.html
@@ -1,10 +1,8 @@
 {% extends "account_base.html" %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Скидання паролю{% endblock %}
 
 {% block account_content %}
-    <h1>Reset your password</h1>
-    <p>We've emailed you instructions for setting your password.</p>
-    <p>If you don't receive an email, please make sure you've
-        entered the address you registered with.</p>
+    <div class="container mt-5 pt-5"></div>
+    <h1 class="text-center text-white">На вашемеіл відправлено інструкцію по скиданню паролю</h1>
 {% endblock %}
