--- a/carpatianknights/account/templates/registration/password_reset_form.html
+++ b/carpatianknights/account/templates/registration/password_reset_form.html
@@ -1,13 +1,23 @@
 {% extends "account_base.html" %}
+{% load widget_tweaks %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Скидання паролю{% endblock %}
 
 {% block account_content %}
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address to obtain a new password.</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Send e-mail"></p>
-        {% csrf_token %}
-    </form>
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            <form action="." method="post" class="col-lg-6 col-md-10 col-sm-12 login-form">
+                <h2 class="text-center text-white">Забули пароль?</h2>
+                <p>Введіть адресу електронної пошти яку вказували при реєстрації, на неї буде відправлено повідомлення
+                    для скидання паролю</p>
+                <div class="mb-3">
+                    <label for="{{ form.email.id_for_label }}" class="form-label">Email address</label>
+                    {% render_field form.email class+="form-control" %}
+                </div>
+                {% csrf_token %}
+                <button type="submit" class="btn btn-secondary w-100">Відправити e-mail</button>
+            </form>
+
+        </div>
+    </div>
 {% endblock %}
