customization account dashboard

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -36,6 +36,7 @@
 
 //Account
 @import "layouts/l-account-login";
+@import "layouts/l-dashboard";
 
 //Person block
 @import "layouts/l-person-block";
