--- a/carpatianknights/account/templates/account/dashboard.html
+++ b/carpatianknights/account/templates/account/dashboard.html
@@ -1,69 +1,86 @@
 {% extends "account_base.html" %}
 {% load static %}
-
+{% load widget_tweaks %}
 {% block title %}З поверненням, {{ user.first_name|title }}! {% endblock %}
 
 {% block account_content %}
 
-    <div class="account_tour">
-        <div class="confirm_tours">
-            <h2>Зарєстровані Маршрути</h2>
-            {% for tour in user_active_tour %}
-                <div class="confirm_tours_card">
-                    <h3>{{ tour.active_route_id.routes_id.name }}</h3>
-                    <p>{{ tour.active_route_id.start_day|date:"d.m" }}-{{ tour.active_route_id.stop_day|date:"d.m.Y" }}</p>
-                    <p>Провідник: {{ tour.active_route_id.leader }}</p>
-                    {% if tour.status %}
-                        <h2>Статус заявки : Підтверджено</h2>
-                    {% else %}
-                        <h2>Статус заявки : Прийнято, очікуйте на підтвердження.</h2>
-                    {% endif %}
+
+    <div class="container my-5 py-5">
+        <div class="row justify-content-center gy-3">
+            <div class="col-md-7 col-sm-12 dashboard-background">
+                <div class="confirm_tours">
+                    <h2 class="text-center">Зарєстровані Маршрути</h2>
+                    {% for tour in user_active_tour %}
+                        <div class="confirm_tours_card">
+                            <h3>{{ tour.active_route_id.routes_id.name }}</h3>
+                            <p>{{ tour.active_route_id.start_day|date:"d.m" }}-{{ tour.active_route_id.stop_day|date:"d.m.Y" }}</p>
+                            <p>Провідник: {{ tour.active_route_id.leader }}</p>
+                            {% if tour.status %}
+                                <p>Статус заявки : <span class="text-success">Підтверджено</span></p>
+                            {% else %}
+                                <p>Статус заявки : <span
+                                        class="text-warning">Прийнято, очікуйте на підтвердження.</span></p>
+                            {% endif %}
+                        </div>
+                    {% empty %}
+                        <p>Ви ще не зареєстровані ні на один похід</p>
+                    {% endfor %}
                 </div>
-            {% empty %}
-                <p>Ви ще не зареєстровані ні на один похід</p>
-            {% endfor %}
-        </div>
-        <div class="history_tour">
-            <h2>Історія сходжень</h2>
-            {% for tour in user_history_tour %}
-                <h3>{{ tour.active_route_id.routes_id.name }}</h3>
-                <p>{{ tour.active_route_id.start_day|date:"d.m" }}-{{ tour.active_route_id.stop_day|date:"d.m.Y" }}</p>
-                <p>Провідник: {{ tour.active_route_id.leader }}</p>
-            {% empty %}
-                <p>Ви ще не пройшли ні кілометру з нами</p>
-            {% endfor %}
-        </div>
+                <div class="history_tour">
+                    <h2 class="text-center">Історія сходжень</h2>
+                    {% for tour in user_history_tour %}
+                        <h3>{{ tour.active_route_id.routes_id.name }}</h3>
+                        <p>{{ tour.active_route_id.start_day|date:"d.m" }}-{{ tour.active_route_id.stop_day|date:"d.m.Y" }}</p>
+                        <p>Провідник: {{ tour.active_route_id.leader }}</p>
+                    {% empty %}
+                        <p>Ви ще не пройшли ні кілометру з нами</p>
+                    {% endfor %}
+                </div>
 
-        <div class="tour_registration">
-            <p>Записатися в похід</p>
-            <div class="login-form">
-                <form action="" method="post">
-                    {{ tour_registration_form.as_p }}
-                    {% csrf_token %}
-                    <p><input type="submit" value="Записатися"></p>
-                </form>
             </div>
-        </div>
-        <div class="tour_history">
-
-        </div>
-    </div>
-    <div class="account_profile">
-        <div class="some">
-            <img src="{% if user.profile.photo %}
+            <div class="col-md-4 col-sm-12 dashboard-background">
+                <div class="account_profile">
+                    <div class="profile-detail">
+                        <img class="img-fluid" src="{% if user.profile.photo %}
                             {{ user.profile.photo.url }}
                        {% else %}
                             {% static "images/avatar-1577909_960_720.webp" %}{% endif %}">
-            <p>Успішних маршрутів: {{ user_history_tour.count }}</p>
-            <p>User rank: {{ user.profile.user_rang }}</p>
-            <p>На сайті з {{ user.profile.date_of_registration|date:"d.m.Y" }}</p>
-            <p>You can also <a href="{% url "edit" %}">edit your profile</a> or
-                <a href="{% url "password_change" %}">change your password</a>.
-            <p>
-                <a href="{% url "logout" %}">Logout</a>
+                        <p class="text-center">{{ user.first_name }} {{ user.last_name }}</p>
+                        <p>Успішних маршрутів: {{ user_history_tour.count }}</p>
+                        <p>User rank: {{ user.profile.user_rang }}</p>
+                        <p>На сайті з {{ user.profile.date_of_registration|date:"d.m.Y" }}</p>
+                    </div>
+                </div>
+                <div class="tour_registration mt-3">
+                    <h3 class="text-center">Записатися в похід</h3>
+                    <div class="registration-form">
+                        <label for="{{ tour_registration_form.id_for_label }}">Активні маршрути:</label>
+                        <select class="form-select" aria-label="Default select example">
+                            {% for active_tour in tour_registration_form %}
+                                {% for tour in active_tour %}
+                                    {% if forloop.first %}
+                                        <option selected>Оберіть маршрут</option>
+                                    {% else %}
+                                        {{ tour }}
+                                    {% endif %}
+                                {% endfor %}
+                            {% endfor %}
+                        </select>
+
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-secondary w-100 mt-2">Записатися</button>
+                    </div>
+                </div>
+                <div class="profile-btn mt-2">
+                    <a class="btn btn-secondary href_register w-100 my-2" href="{% url "edit" %}">Редагувати профіль</a>
+                    <a class="btn btn-secondary href_register w-100 " href="{% url "password_change" %}">Змінити
+                        пароль</a>
+                    <a class="btn btn-secondary href_register w-100 my-2" href="{% url "logout" %}">Вийти</a>
+                </div>
+            </div>
         </div>
     </div>
-
 
 
 {% endblock %}
