customization password_change_form

--- a/carpatianknights/account/templates/account/register_done.html
+++ b/carpatianknights/account/templates/account/register_done.html
@@ -1,5 +1,5 @@
 {% extends "account_base.html" %}
-{% block title %}Welcome{% endblock %}
+{% block title %}Ласкаво просимо!{% endblock %}
 {% block account_content %}
     <div class="container mt-5 pt-5"></div>
     <h1 class="text-center text-white">Вітаємо {{ new_user.first_name }}!</h1>
