--- a/carpatianknights/account/templates/registration/password_change_form.html
+++ b/carpatianknights/account/templates/registration/password_change_form.html
@@ -1,13 +1,33 @@
 {% extends "account_base.html" %}
+{% load widget_tweaks %}
 
-{% block title %}Change you password{% endblock %}
+{% block title %}Зміна паролю{% endblock %}
 
 {% block account_content %}
-    <h1>Change you password</h1>
-    <p>Use the form below to change your password.</p>
-    <form action="." method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Change"></p>
-        {% csrf_token %}
-    </form>
+
+    <div class="container">
+        <div class="row justify-content-center my-5">
+            <form action="." method="post" class="col-lg-6 col-md-10 col-sm-12 login-form">
+                <h2 class="text-center text-white">Змінити ваш пароль можна заповнивши форму нижче</h2>
+                <p>Пароль має бути більше 6 символів, використовуйте латиницю, цифри та знаки</p>
+                <div class="mb-3">
+                    <label for="{{ form.old_password.id_for_label }}" class="form-label">Старий пароль</label>
+                    {% render_field form.old_password class+="form-control" %}
+                </div>
+                <div class="mb-3">
+                    <label for="{{ form.new_password1.id_for_label }}" class="form-label">Новий парольароль</label>
+                    {% render_field form.new_password1 class+="form-control" minlength="6" %}
+                </div>
+                <div class="mb-3">
+                    <label for="{{ form.new_password2.id_for_label }}" class="form-label">Повторити пароль</label>
+                    {% render_field form.new_password2 class+="form-control" minlength="6" %}
+                </div>
+                <button type="submit" class="btn btn-secondary w-100 mb-3">Застосувати зміни</button>
+                <a href="/account" class="btn btn-secondary w-100 mb-3">Назад в особистий кабінет</a>
+                {% csrf_token %}
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
+
