customization password_change_done

--- a/carpatianknights/account/templates/registration/password_change_done.html
+++ b/carpatianknights/account/templates/registration/password_change_done.html
@@ -1,6 +1,8 @@
 {% extends "account_base.html" %}
-{% block title %}Password changed{% endblock %}
+{% block title %}Зміна паролю{% endblock %}
 {% block account_content %}
-    <h1>Password changed</h1>
-    <p>Your password has been successfully changed.</p>
+    <div class="container mt-5 pt-5"></div>
+    <h1>Пароль змінено</h1>
+    <p class="text-center text-white fs-2">Ваш пароль було успішно змінено тепер ви можете
+        <a class="text-white fs-2" href="/account">повернутися до особистого кабінету</a>.</p>
 {% endblock %}
