--- a/carpatianknights/account/templates/registration/password_change_done.html
+++ b/carpatianknights/account/templates/registration/password_change_done.html
@@ -2,7 +2,7 @@
 {% block title %}Зміна паролю{% endblock %}
 {% block account_content %}
     <div class="container mt-5 pt-5"></div>
-    <h1>Пароль змінено</h1>
+    <h1 class="text-center text-white">Пароль змінено</h1>
     <p class="text-center text-white fs-2">Ваш пароль було успішно змінено тепер ви можете
         <a class="text-white fs-2" href="/account">повернутися до особистого кабінету</a>.</p>
 {% endblock %}
