--- a/carpatianknights/account/templates/registration/password_change_form.html
+++ b/carpatianknights/account/templates/registration/password_change_form.html
@@ -15,11 +15,11 @@
                     {% render_field form.old_password class+="form-control" %}
                 </div>
                 <div class="mb-3">
-                    <label for="{{ form.new_password1.id_for_label }}" class="form-label">Новий парольароль</label>
+                    <label for="{{ form.new_password1.id_for_label }}" class="form-label">Новий пароль</label>
                     {% render_field form.new_password1 class+="form-control" minlength="6" %}
                 </div>
                 <div class="mb-3">
-                    <label for="{{ form.new_password2.id_for_label }}" class="form-label">Повторити пароль</label>
+                    <label for="{{ form.new_password2.id_for_label }}" class="form-label">Повторити новий пароль</label>
                     {% render_field form.new_password2 class+="form-control" minlength="6" %}
                 </div>
                 <button type="submit" class="btn btn-secondary w-100 mb-3">Застосувати зміни</button>
