--- a/carpatianknights/account/templates/registration/password_reset_confirm.html
+++ b/carpatianknights/account/templates/registration/password_reset_confirm.html
@@ -1,16 +1,31 @@
 {% extends "account_base.html" %}
-{% block title %}Reset your password{% endblock %}
+{% load widget_tweaks %}
+{% block title %}Скидання паролю{% endblock %}
+
+
 {% block account_content %}
-    <h1>Reset your password</h1>
-    {% if validlink %}
-        <p>Please enter your new password twice:</p>
-        <form action="." method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <p><input type="submit" value="Change my password"/></p>
-        </form>
-    {% else %}
-        <p>The password reset link was invalid, possibly because it
-            has already been used. Please request a new password reset.</p>
-    {% endif %}
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            {% if validlink %}
+                <form action="." method="post" class="col-lg-6 col-md-10 col-sm-12 login-form">
+                    <h2 class="text-center text-white">Введыть новий пароль двічі</h2>
+                    <p>Пароль має бути блільше 8 символів, використовуйте латиницю цифри та символи</p>
+                    <div class="mb-3">
+                        <label for="{{ form.new_password1.id_for_label }}" class="form-label">Новий пароль</label>
+                        {% render_field form.new_password1 class+="form-control" minlength="6" %}
+                    </div>
+                    <div class="mb-3">
+                        <label for="{{ form.new_password2.id_for_label }}" class="form-label">повторити пароль</label>
+                        {% render_field form.new_password2 class+="form-control" minlength="6" %}
+                    </div>
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-secondary w-100">Відправити</button>
+                </form>
+            {% else %}
+                <p class="text-white text-center">Посилання на скидання паролю нективне,
+                    будь ласка повторіть спробу ще раз</p>
+            {% endif %}
+        </div>
+    </div>
+
 {% endblock %}
