--- a/carpatianknights/account/templates/registration/password_reset_complete.html
+++ b/carpatianknights/account/templates/registration/password_reset_complete.html
@@ -1,8 +1,9 @@
 {% extends "account_base.html" %}
-{% block title %}Password reset{% endblock %}
+{% block title %}Пароль змінено{% endblock %}
 {% block account_content %}
-    <h1>Password set</h1>
-    <p>Your password has been set. You can
-        <a href="{% url "login" %}">log in now</a>
-    </p>
+    <div class="container mt-5 pt-5">
+        <h2 class="text-center text-white">Пароль успішно змінено!</h2>
+        <h2 class="text-center text-white">Тепер ви можете ввійти до <a class="text-white" href="{% url "login" %}">особистого кабунету</a>
+        </h2>
+    </div>
 {% endblock %}
