--- a/carpatianknights/account/templates/registration/password_reset_done.html
+++ b/carpatianknights/account/templates/registration/password_reset_done.html
@@ -3,6 +3,7 @@
 {% block title %}Скидання паролю{% endblock %}
 
 {% block account_content %}
-    <div class="container mt-5 pt-5"></div>
-    <h1 class="text-center text-white">На вашемеіл відправлено інструкцію по скиданню паролю</h1>
+    <div class="container mt-5 pt-5">
+            <h1 class="text-center text-white">На вашу електронну адерсу відправлено інструкцію по скиданню паролю</h1>
+    </div>
 {% endblock %}
