customization password rest form and some fixes

--- a/carpatianknights/account/templates/registration/password_reset_confirm.html
+++ b/carpatianknights/account/templates/registration/password_reset_confirm.html
@@ -8,7 +8,7 @@
         <div class="row justify-content-center mt-5">
             {% if validlink %}
                 <form action="." method="post" class="col-lg-6 col-md-10 col-sm-12 login-form">
-                    <h2 class="text-center text-white">Введыть новий пароль двічі</h2>
+                    <h2 class="text-center text-white">Введіть новий пароль двічі</h2>
                     <p>Пароль має бути блільше 8 символів, використовуйте латиницю цифри та символи</p>
                     <div class="mb-3">
                         <label for="{{ form.new_password1.id_for_label }}" class="form-label">Новий пароль</label>
