--- a/carpatianknights/front_end/templates/homepage/about-us.html
+++ b/carpatianknights/front_end/templates/homepage/about-us.html
@@ -10,7 +10,7 @@
                     приєднатись до нашої спільноти та вирушити з нами в незабутню подорож карпатськими стежками у
                     відповідності з актуальними маршрутами, ознайомитись з якими, а також з історією попередніх походів,
                     актуальними новинами та планами можна перейшовши у відповідний розділ. Приєднуйтесь до нас у
-                    соцмережах, або ж зв'язуйтесь напряму за телефоном ____ чи на поштову скриньку ____</p>
+                    соцмережах, або ж зв'язуйтесь напряму за телефоном +380982584602 чи на поштову скриньку carpatianknights@gmail.com</p>
             </div>
         </div>
     </div>
