--- a/carpatianknights/account/templates/registration/password_reset_ email.html
+++ b/carpatianknights/account/templates/registration/password_reset_ email.html
@@ -1,3 +1,4 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+Хтось намагається скинути пароль для емейлу {{ email }}. Якщо це ви. то перейдіть по посиланню:
 {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
-Your username, in case you've forgotten: {{ user.get_username }}
+Якщо це не ви. то прохання ігнорувати дане повідомлення
+Ваш юзернейм: {{ user.get_username }}
